<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/rememri_green"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rememriTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/righteous"
        android:text="@string/app_name"
        android:textColor="@color/rememri_black"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/topToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topToolbar" />

    <ImageButton
        android:id="@+id/accountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@color/rememri_green"
        android:minWidth="48dp"
        android:minHeight="40dp"
        android:scaleX="1.75"
        android:scaleY="1.75"
        app:layout_constraintBottom_toBottomOf="@+id/topToolbar"
        app:layout_constraintEnd_toStartOf="@+id/friendsButton"
        app:layout_constraintTop_toTopOf="@+id/topToolbar"
        app:srcCompat="@drawable/account_icon_outlined" />

    <ImageButton
        android:id="@+id/friendsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:background="@color/rememri_green"
        android:minWidth="48dp"
        android:minHeight="40dp"
        android:onClick="returnFriends"
        android:scaleX="1.75"
        android:scaleY="1.75"
        android:src="@drawable/friends_icon"
        app:layout_constraintBottom_toBottomOf="@+id/topToolbar"
        app:layout_constraintEnd_toEndOf="@+id/topToolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bottomToolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/rememri_dark_gray"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="85dp"
        android:onClick="returnMain"
        app:layout_constraintEnd_toStartOf="@id/accountTitle"
        app:layout_constraintTop_toTopOf="@id/bottomToolbar"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/accountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/righteous"
        android:text="@string/account_title"
        android:textColor="@color/rememri_white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/bottomToolbar"
        app:layout_constraintTop_toTopOf="@+id/bottomToolbar" />

    <ImageView
        android:id="@+id/accountIcon"
        android:layout_width="118dp"
        android:layout_height="146dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topToolbar"
        app:srcCompat="@drawable/baseline_person_outline_18" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/guest"
        android:textColor="@color/rememri_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountIcon" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="98dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/rememri_green"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/login"
        android:textColor="@color/rememri_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="98dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/rememri_green"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/signup"
        android:textColor="@color/rememri_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>