<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/rememri_green"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rememriTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/righteous"
        android:text="@string/app_name"
        android:textColor="@color/rememri_black"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/topToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topToolbar" />

    <ImageButton
        android:id="@+id/accountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@color/rememri_green"
        android:minWidth="48dp"
        android:minHeight="40dp"
        android:onClick="returnAccount"
        android:scaleX="1.75"
        android:scaleY="1.75"
        app:layout_constraintBottom_toBottomOf="@+id/topToolbar"
        app:layout_constraintEnd_toStartOf="@+id/friendsButton"
        app:layout_constraintTop_toTopOf="@+id/topToolbar"
        app:srcCompat="@drawable/account_icon_outlined" />

    <ImageButton
        android:id="@+id/friendsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:background="@color/rememri_green"
        android:minWidth="48dp"
        android:minHeight="40dp"
        android:onClick="returnFriends"
        android:scaleX="1.75"
        android:scaleY="1.75"
        android:src="@drawable/friends_icon"
        app:layout_constraintBottom_toBottomOf="@+id/topToolbar"
        app:layout_constraintEnd_toEndOf="@+id/topToolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/centering_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:clickable="true"
        android:onClick="centerMapOnUserLocation"
        app:backgroundTint="@color/rememri_white"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
        app:srcCompat="@drawable/center_location" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomToolbar"
        app:layout_constraintTop_toBottomOf="@+id/topToolbar">

        <com.mapbox.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.mapbox.maps.MapView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bottomToolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/rememri_dark_gray"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
        android:id="@+id/public_private_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:checkedBackgroundColor="@color/rememri_green"
        app:checkedTextColor="@color/rememri_black"
        app:layout_constraintBottom_toBottomOf="@+id/bottomToolbar"
        app:layout_constraintEnd_toStartOf="@+id/cameraButton"
        app:layout_constraintStart_toStartOf="@+id/bottomToolbar"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:textToggleLeft="@string/Public"
        app:textToggleRight="@string/friend_title"
        app:uncheckedBackgroundColor="@color/rememri_white"
        app:uncheckedTextColor="@color/rememri_black" >
    </com.llollox.androidtoggleswitch.widgets.ToggleSwitch>

    <ImageButton
        android:id="@+id/cameraButton"
        android:contentDescription="@string/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/rememri_dark_gray"
        android:minWidth="48dp"
        android:minHeight="40dp"
        android:scaleX="1.75"
        android:scaleY="1.75"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/bottomToolbar"
        app:layout_constraintTop_toTopOf="@+id/bottomToolbar"
        app:layout_constraintVertical_bias="0.407"
        app:srcCompat="@drawable/camera_plus" />

    <Button
        android:id="@+id/ARButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/rememri_light_gray"
        android:fontFamily="@font/roboto_slab"
        android:onClick="returnAR"
        android:text="@string/ar_button_name"
        android:textColor="@color/rememri_black"
        android:textStyle="bold"
        app:backgroundTint="@color/rememri_light_gray"
        app:layout_constraintBottom_toBottomOf="@+id/bottomToolbar"
        app:layout_constraintEnd_toEndOf="@+id/bottomToolbar"
        app:layout_constraintTop_toTopOf="@+id/bottomToolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>